# btfsearch-crawler-2

./: README.md
searchengine/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
searchengine/app/: __init__.py  api.py  config.py  main.py
searchengine/app/compliance/: __init__.py  licenses.py  robots.py  takedown.py
searchengine/app/crawler/: __init__.py  middlewares.py  pipelines.py  settings.py
searchengine/app/crawler/spiders/: seed_spider.py  sitemap_spider.py
searchengine/app/legal/: datenschutz.html  impressum.html
searchengine/app/search/: __init__.py  autocomplete.py  index.py  rank.py  tokenizer.py
searchengine/app/storage/: __init__.py  db.py  export.py
searchengine/app/utils/: hashing.py  logging.py  timing.py
searchengine/scripts/: __init__.py  build_trie.py  cli.py
searchengine/tests/: __init__.py  test_compliance.py  test_crawl.py  test_search.py
