[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchengine"
version = "1.0.0"
description = "Lightweight, fast and legally compliant web search engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Search Engine Team", email = "admin@example.com"}
]
dependencies = [
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "pydantic>=2.4.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "scrapy>=2.11.0,<3.0.0",
    "trafilatura>=1.6.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=4.9.0,<5.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "redis>=5.0.0,<6.0.0",
    "httpx>=0.25.0,<0.26.0",
    "python-multipart>=0.0.6,<0.1.0",
    "jinja2>=3.1.0,<4.0.0",
    "click>=8.1.0,<9.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "prometheus-client>=0.18.0,<0.19.0",
    "structlog>=23.2.0,<24.0.0",
    "orjson>=3.9.0,<4.0.0",
    "apsw>=3.44.0,<4.0.0",
    "xxhash>=3.4.0,<4.0.0",
    "pyrobuf>=0.9.3,<1.0.0",
    "urllib3>=2.0.0,<3.0.0",
    "certifi>=2023.0.0",
    "reppy>=0.4.14,<1.0.0",
    "w3lib>=2.1.0,<3.0.0",
    "itemadapter>=0.8.0,<1.0.0",
    "protego>=0.3.0,<1.0.0",
    "parsel>=1.8.0,<2.0.0",
    "queuelib>=1.6.0,<2.0.0",
    "cssselect>=1.2.0,<2.0.0",
    "typing-extensions>=4.8.0,<5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "mypy>=1.6.0,<2.0.0",
    "ruff>=0.1.0,<0.2.0",
    "black>=23.10.0,<24.0.0",
    "ipython>=8.16.0,<9.0.0",
    "httpx>=0.25.0,<0.26.0"
]

[project.scripts]
searchengine = "scripts.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app", "scripts"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'